--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Estilo customizado -->
     <link rel="stylesheet" type="text/css">
 
-    <title>Quem Somos - CEMTEC</title>
+    <title>Buscador</title>
     <link rel="icon" href="imagens/icone3.png">
 
     <!-- Bootstrap CSS -->
